@@ -6,6 +6,10 @@ Changes with Apache 1.2b1:
   *) Graceful restart code added. This allows the server to restart without
      losing current connections on receipt of signal 2 (SIGINT). [Ben Laurie]
 
+  *) Added BROKEN_WAIT flag to conf.h, to be used on systems which fail to
+     reap their children correctly (symptom: mod_status shows children which
+     don't exist). [Ben Laurie]
+
 Changes with Apache 1.1.1:
 
   *) Fixed bug where Cookie module would make two entries in the
